* 1.2.6

	- removed jquery plugin methods.  they conflict with jquery 1.5.

	- addition of jsPlumb.Overlays.Image
	
	- addition of mouse events to connectors/endpoints (mouseenter, mouseexit, click, mousemove)

	- addition of setStyle method to Endpoint.
	
	- added optional referenceParams argument to jsPlumb.connect; use this to supply shared info between many connections.

* 1.2.5

	- added support for YUI3
	- removed 'html', 'css' directories and moved everything demo-related into "demo".
	- now using jsBezier-0.2
	- removed jsPlumb.autoConnect method.  use the 'dynamicAnchors' parameter on a jsPlumb.connect call.
	- added support for specifying an Endpoint's anchor as a dynamic anchor defined as an array of arrays or array of strings.  like this:
	
	    var endpointSpec = { 
	   		endpoint:new jsPlumb.Endpoints.Rectangle(),
	   		anchor:[ [0, 0, -1, -1], [1, 1, 1, 1] ]
	   	};
	   	
	   	or
	   	
	   	var endpointSpec = {
	   		endpoint:new jsPlumb.Endpoints.Rectangle(),
	   		anchor:["TopLeft", "BottomRight"]
	   	};
	   	
	   	jsPlumb will create a DynamicAnchor for each usage of these endpoint specs.
	   	
	   	"anchors" works too; i just used "anchor" to keep it consistent with the notion that a dynamic anchor should be treated like
	   	a 'normal' anchor. it just happens to move around.  but then, "anchors" makes more sense.  hence the fact you can use both.

* 1.2.4
	
	- added 'connection' to getConnection method's output.
	- fix for issue 35 (detach event contained wrong source endpoint)
	- fix for issue 42 (jsPlumb_dragged class not removed from element after drag) 
	- fix for issue 43 (performance problems causing connections and endpoints to detach when dragging)
	- fix for issue 44 (use a proper way of detecting Canvas support)
	- added connectorOverlays option on Endpoint: specify overlays for Connectors dragged from the Endpoint.
	- added support for multi line labels (issue 36)
	- added Image overlay type.
	